Removed user editing functionality from admin pages.

--- a/FowlerSite/Views/Login/Update.cshtml
+++ b/FowlerSite/Views/Login/Update.cshtml
@@ -21,38 +21,38 @@
                 <div class="row">
                     <div class="col-lg-6 col-sm-12">
                         <label for="firstname">First Name:</label>
-                        <input type="text" value="@Model.FirstName" name="firstname" asp-for="FirstName" class="form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.FirstName" name="firstname" asp-for="FirstName" class="form-control">
                     </div>
 
                     <div class="col-lg-6 col-sm-12">
                         <label for="lastname">Last Name:</label>
-                        <input type="text" value="@Model.LastName" name="lastname" asp-for="LastName" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.LastName" name="lastname" asp-for="LastName" class="required form-control">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 col-sm-12">
                         <label for="username">Username:</label>
-                        <input type="text" value="@Model.Username" name="username" asp-for="Username" class="form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.Username" name="username" asp-for="Username" class="form-control">
                     </div>
 
                     <div class="col-lg-6 col-sm-12">
                         <label for="password">Password:</label>
-                        <input type="password" value="@Model.Password" name="password" asp-for="Password" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="password" value="@Model.Password" name="password" asp-for="Password" class="required form-control">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-12">
                         <label for="emailaddress">Email:</label>
-                        <input type="text" value="@Model.EmailAddress" name="emailaddress" asp-for="EmailAddress" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.EmailAddress" name="emailaddress" asp-for="EmailAddress" class="required form-control">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-12">
                         <label for="cardnumber">Card Number:</label>
-                        <input type="text" value="@Model.CardNumber" name="cardnumber" asp-for="CardNumber" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.CardNumber" name="cardnumber" asp-for="CardNumber" class="required form-control">
                     </div>
                 </div>
 
@@ -60,14 +60,14 @@
                 <div class="row">
                     <div class="col-12">
                         <label for="CardExpire">Card Epiration Date:</label>
-                        <input type="text" value="@Model.CardExpire" name="CardExpire" asp-for="CardExpire" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.CardExpire" name="CardExpire" asp-for="CardExpire" class="required form-control">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-12">
                         <label for="CardCvc">Card CVC:</label>
-                        <input type="text" value="@Model.CardCvc" name="cardcvc" asp-for="CardCvc" class="required form-control">
+                        <input style="background-color: transparent;" disabled type="text" value="@Model.CardCvc" name="cardcvc" asp-for="CardCvc" class="required form-control">
                     </div>
                 </div>
 
