--- a/FowlerSite/Views/Login/Admin.cshtml
+++ b/FowlerSite/Views/Login/Admin.cshtml
@@ -40,7 +40,7 @@
             <th>First Name:</th>
             <th>Last Name:</th>
             <th>Email:</th>
-            <th>Edit:</th>
+            <th>View:</th>
             <th>Delete:</th>
             <th>Upgrade:</th>
         </tr>
@@ -54,7 +54,7 @@
                     <td>@u.FirstName</td>
                     <td>@u.LastName</td>
                     <td>@u.EmailAddress</td>
-                    <td><a class="btn btn-outline-primary" asp-action="Update" asp-route-id="@u.Id">Edit User</a></td>
+                    <td><a class="btn btn-outline-primary" asp-action="Update" asp-route-id="@u.Id">View User</a></td>
                     <td>
                         <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#myModal">
                             Delete User
@@ -106,7 +106,7 @@
             <th>First Name:</th>
             <th>Last Name:</th>
             <th>Email:</th>
-            <th>Edit:</th>
+            <th>View:</th>
             <th>Delete:</th>
         </tr>
         @foreach (var u in Model.Users)
@@ -119,12 +119,12 @@
         <td>@u.FirstName</td>
         <td>@u.LastName</td>
         <td>@u.EmailAddress</td>
-        <td><a class="btn btn-outline-primary" asp-controller="Users" asp-action="Update" asp-route-id="@u.Id">Edit User</a></td>
+        <td><a class="btn btn-outline-primary" asp-controller="Users" asp-action="Update" asp-route-id="@u.Id">View Admin</a></td>
         @if (Model.UserId != u.Id)
         {
             <td>
                 <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#myModal">
-                    Delete User
+                    Delete Admin
                 </button>
                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
@@ -158,7 +158,7 @@
         {
     <td>
         <button type="button" disabled class="btn btn-outline-danger">
-            Delete User
+            Delete Admin
         </button>
     </td>   
         }
