--- a/FowlerSite/Views/Home/ContactUs.cshtml
+++ b/FowlerSite/Views/Home/ContactUs.cshtml
@@ -37,7 +37,7 @@
                         <img src="~/assets/images/Casey.png" alt="casey.png" width="250" class="img-thumbnail contactImages" />
                     </div>
                     <div class="nk-feature-cont">
-                        <h4 class="nk-feature-title">sojdenfr sije foiwujenfuaswfghbdag sddj  hbsdhf</h4>
+                        <h4 class="nk-feature-title"></h4>
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         <img src="~/assets/images/Anthony.jpg" alt="anthony.jpg" width="250" class="img-thumbnail contactImages" />
                     </div>
                     <div class="nk-feature-cont">
-                        <h4 class="nk-feature-title">sojdenfr sije foiwujenfuaswfghbdag sddj  hbsdhf</h4>
+                        <h4 class="nk-feature-title"></h4>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <img src="~/assets/images/Michael.jpg" alt="michael.jpg" width="250" class="img-thumbnail contactImages" />
                     </div>
                     <div class="nk-feature-cont">
-                        <h4 class="nk-feature-title">sojdenfr sije foiwujenfuaswfghbdag sddj  hbsdhf</h4>
+                        <h4 class="nk-feature-title"></h4>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                         <img src="~/assets/images/Dominic.png" alt="dominic.jpg" width="250" class="img-thumbnail contactImages" />
                     </div>
                     <div class="nk-feature-cont">
-                        <h4 class="nk-feature-title">sojdenfr sije foiwujenfuaswfghbdag sddj  hbsdhf</h4>
+                        <h4 class="nk-feature-title"></h4>
                     </div>
                 </div>
             </div>
