Fixed some errors that I found on run through.

--- a/FowlerSite/Views/Store/StoreCheckout.cshtml
+++ b/FowlerSite/Views/Store/StoreCheckout.cshtml
@@ -146,7 +146,7 @@
                             <input type="text" class="form-control required" name="cardname" id="cardname" />
                             <div class="nk-gap-1"></div>
                             <label for="cardnumber">Credit Card Number<span class="text-main-1">*</span>:</label>
-                            <input type="tel" required="required" data-parsley-creditcard="visa, mastercard" class="form-control required" name="cardnumber" id="cardnumber" />
+                            <input type="tel" maxlength="16" required="required" data-parsley-creditcard="visa, mastercard" class="form-control required" name="cardnumber" id="cardnumber" />
                             <div class="nk-gap-1"></div>
                             <label for="cardnumber">Card Type<span class="text-main-1">*</span>:</label>
                             <select class="form-control required" required name="cardtype" id="cardtype">
